# BoltzmannSolver

./: LICENSE  README.md  pyproject.toml
notebooks/: diploma_experiments_1.ipynb
solver/: boltzmann_integral.py  constants.py  solvers.py
