[tool.poetry]
name = "boltzmannsolver"
version = "0.1.0"
description = ""
authors = ["timofeyzhdanovich <ZhdanovichTimofey@github>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
